test/compile_failure/19_duplicate_case.c
// EXPECT-ERRORS: 1
// EXPECT: duplicate case value
int main() {
    switch (1) {
        case 1:
            break;
        case 1:
            break;
    }
    return 0;
}
